--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -13,20 +13,21 @@
 <body">
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
- <p><h3><a href="https://pjjeniffer.github.io/Individual%20Project/html.html">HTML</h3></a></p> 
- <p><h3><a href="https://pjjeniffer.github.io/Individual%20Project/css.html">CSS</h3></a></p>                                            
- <p class="center"><h1>What is HTML and CSS?</h1></p>
- <p><h4>HTML is HyperText Markup Language,The hypertext markup language is an application under the standard generic markup language,
+                                             
+ <p class="center"><h1>What is HTML?</h1></p>
+ <p><h4>HTML is HyperText Markup LanguageHTML is not a programming language, but a markup language The hypertext markup language is an application under the standard generic markup language,
                                         which is also a specification, a standard that marks the various parts of a web page to be displayed by marking symbols.CSS is Cascading Style Sheets,
-                                        A computer language used to display file styles such as HTML or XML. <br />CSS can be used to not only modify pages in a static way, 
-                                        but also to format the elements of the page dynamically with various scripting languages.</h4></p>
+                                        A computer language used to display file styles such as HTML or XML. 
+  <p class="center"><h1>What is CSS?</h1></p>
+  <p><h4>CSS can be used to not only modify pages in a static way, 
+    but also to format the elements of the page dynamically with various scripting languages.</h4></p>
 <hr/>
 <audio controls="controls">
-  <source src="pjjeniffer.github.io/Individual Project/music.mp3" type="audio/ogg">
-  <source src="pjjeniffer.github.io/Individual Project/music.mp3" type="audio/mpeg">
+  <source src="Individual Project/music.mp3" type="audio/ogg">
+  <source src="Individual Project/music.mp3" type="audio/mpeg">
 </audio>                  
 <footer>
-      <p><font color="F90">Made by: pjjeniffer</font></p>
+      <p><font color="FFCC33">Made by: pjjeniffer</font></p>
 </footer>
 </body>
 </html>
