--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -21,7 +21,7 @@
   <p class="center"><h1>What is CSS?</h1></p>
   <p><h4>CSS can be used to not only modify pages in a static way, 
     but also to format the elements of the page dynamically with various scripting languages.</h4></p>
-<a href="https://pjjeniffer.github.io/Individual%20Project/context.html"><h4>Context</h4></a> 
+<a href="https://pjjeniffer.github.io/Individual%20Project/context.html"><h4>Directory</h4></a> 
 <audio controls="controls">
   <source src="Individual Project/music.mp3" type="audio/ogg">
   <source src="Individual Project/music.mp3" type="audio/mpeg">
