--- a/Individual Project/context.html
+++ b/Individual Project/context.html
@@ -1,14 +1,20 @@
-﻿<html>
+<html>
 <head>
-<title>Html</title>
+<title>Context</title>
  <link rel="stylesheet" type="text/css" href="main.css" />
  <style type="text/css">
+ .center {text-align: center}
  </style>
 </head>
 <body">
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
- <p><h2>HTML</h2></a>
+ <p class="center"><h2>directory</h2></a>
+ <p><h3><a href="https://pjjeniffer.github.io/Individual%20Project/individual">Introduction about HTML and CSS</h3></a></p>
+ <p><h3><a href="https://pjjeniffer.github.io/Individual%20Project/html.html">HTML</h3></a></p> 
+ <p><h3><a href="https://pjjeniffer.github.io/Individual%20Project/css.html">CSS</h3></a></p>
+ <p><h3><a href="https://pjjeniffer.github.io/Individual%20Project/htmltag.html">Html Tag</h3></a></p> 
+ 
 <hr/>
 <footer>
       <p><font color="FFCC33">Made by: pjjeniffer</font></p>
