--- a/Individual Project/context.html
+++ b/Individual Project/context.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Context</title>
+<title>Directory</title>
  <link rel="stylesheet" type="text/css" href="main.css" />
  <style type="text/css">
  .center {text-align: center}
@@ -9,7 +9,7 @@
 <body">
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
- <p class="center"><h2>directory</h2></a>
+ <p class="center"><h2>Directory</h2></a>
  <p><h3><a href="https://pjjeniffer.github.io/Individual%20Project/individual">Introduction about HTML and CSS</h3></a></p>
  <p><h3><a href="https://pjjeniffer.github.io/Individual%20Project/html.html">HTML</h3></a></p> 
  <p><h3><a href="https://pjjeniffer.github.io/Individual%20Project/css.html">CSS</h3></a></p>
