--- a/Individual Project/htmltag.html
+++ b/Individual Project/htmltag.html
@@ -202,7 +202,7 @@
     <td>use for explain the code</td>
   </tr>
 </table>
- <a href="https://pjjeniffer.github.io/Individual%20Project/individual">back to homepage</a>
+ <a href="https://pjjeniffer.github.io/Individual%20Project/context.html">back to Directory</a>
 <hr/>
 <footer>
       <p><font color="FFCC33">Made by: pjjeniffer</font></p>
