--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Html And Css</title>
+<meta name="keywords" content="HTML,CSS">
  <link rel="stylesheet" type="text/css" href="main.css" />
  <style type="text/css">
   .center 
