--- a/Individual Project/How to write a HTML.html
+++ b/Individual Project/How to write a HTML.html
@@ -1,14 +1,20 @@
 <html>
 <head>
-<title>Html</title>
+<title>How to write a HTML</title>
  <link rel="stylesheet" type="text/css" href="main.css" />
- <style type="text/css">
- </style>
 </head>
 <body">
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
- <p><h2>HTML</h2></a>
+ <p><h2><center>How to write the first HTML</center></h2></a>
+ <p><font size="20" color="FF6347">Here we just use the Notepad to write our first htmlyou can also use the more professional editors such as webstorm or sublime</font></p>
+ <p><font size="20">1.open the Notepad</br>2.write the html code such as this</font></p>
+ <img src="/Individual Project/html1.jpg"  alt="example" height="300" width="215"/>
+ <p><font size="20">3.save the html，select files in the menu bar and save as.html</font></p>
+ <img src="/Individual Project/example2.jpg"  alt="example" height="300" width="215"/>
+ <p><font size="20">4.Upload the site to github to let others can see it</font></p>
+ <a href="https://pjjeniffer.github.io/Individual%20Project/Github.html">something about Github</a>
+ <a href="https://pjjeniffer.github.io/Individual%20Project/context.html">back to Directory</a>
 <hr/>
 <footer>
       <p><font color="FFCC33">Made by: pjjeniffer</font></p>
