--- a/Individual Project/How to write a HTML.html
+++ b/Individual Project/How to write a HTML.html
@@ -6,13 +6,13 @@
 <body">
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
- <p><h2><center>How to write the first HTML</center></h2></a>
- <p><font size="14" color="FF6347">Here we just use the Notepad to write our first htmlyou can also use the more professional editors such as webstorm or sublime</font></p>
- <p><font size="10">1.open the Notepad</br>2.write the html code such as this</font></p>
- <img src="/Individual Project/html1.jpg"  alt="example" height="520" width="378"/>
- <p><font size="10">3.save the html，select files in the menu bar and save as.html</font></p>
- <img src="/Individual Project/example2.jpg"  alt="example" height="520" width="378"/>
- <p><font size="10">4.Upload the site to github to let others can see it</font></p>
+ <p><h1><center>How to write the first HTML</center></h2></a>
+ <p><font size="10" color="FF6347">Here we just use the Notepad to write our first htmlyou can also use the more professional editors such as webstorm or sublime</font></p>
+ <p><h3>1.open the Notepad</br>2.write the html code such as this</h3></p>
+ <img src="/Individual Project/html1.jpg"  alt="example" height="850" width="400"/>
+ <p><h3>3.save the html，select files in the menu bar and save as.html</h3></p>
+ <img src="/Individual Project/example2.jpg"  alt="example" height="850" width="400"/>
+ <p><h3>4.Upload the site to github to let others can see it</h3></p>
  <div><a href="https://pjjeniffer.github.io/Individual%20Project/Github.html">something about Github</a></div>
  <div><a href="https://pjjeniffer.github.io/Individual%20Project/context.html">back to Directory</a></div>
 <hr/>
