--- a/Individual Project/html.html
+++ b/Individual Project/html.html
@@ -13,8 +13,10 @@
 <embed src="https://v.qq.com/x/page/w0172wyt76a.html" width="1000" height="400" ></embed>
 <p class="center"><h3>Some commonly used HTML tags</h3></p>
 <a href="https://pjjeniffer.github.io/Individual%20Project/htmltag.html"><h4>Html Tag</h4></a>
-<p><h3>Some commonly used HTML tags</h3></p>
-<a href="https://pjjeniffer.github.io/Individual%20Project/htmltag.html"><h4>Html Tag</h4></a>
+<p><h3>How to write the first HTML</h3></p>
+<a href="https://pjjeniffer.github.io/Individual%20Project/How%20to%20write%20a%20HTML.html"><h4>Write Html</h4></a>
+
+<div><a href="https://pjjeniffer.github.io/Individual%20Project/context.html">back to Directory</a></div>
 <hr/>
 <footer>
       <p><font color="FFCC33">Made by: pjjeniffer</font></p>
