--- a/Individual Project/Github.html
+++ b/Individual Project/Github.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 <head>
 <title>Github</title>
  <link rel="stylesheet" type="text/css" href="main.css" />
@@ -7,10 +7,27 @@
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
  <p><h3>What is github?</h3></p>
- <p><h4>GitHub is a hosting platform for open source and proprietary software projects.</h4></p>
+ <p><h4>GitHub is a hosting platform for open source and proprietary software projects.<br/>
+     In addition to hosting git code warehouse and basic Web management interface, also provides subscription, discussion groups, text rendering, online file editor, collaborative graph (report), and share code snippet (Gist), and other functions.</h4></p>
 <hr />
- <p><h3>How to download the github?</h3></p>
- <p><h3>How to use the github?</h3></p>
+ <p><h3>How to download and installation the github?</h3></p>
+ <p><h4>Go to the Github website to download.The official github website address is</h4></p>
+ <a href="https://github.com/">official github website</a>
+ <p><h4>Then register the gthub account</h4></p>
+<form action="https://github.com/">
+Username:<br/>
+<input type="text" value="you name">
+<br/>
+E-mail:<br/>
+<input type="text" value="your e-mail address">
+cipher:<br/>
+<input type="text" value="your chiper">
+<br/><br/>
+<input type="submit" value="Sign up">
+</form> 
+<p><h4>Click new repositories<br/>Upload the project to GitHub</h4></p>
+<br/>
+<a href="https://pjjeniffer.github.io/Individual%20Project/context.html">back to Directory</a>
 <hr/>
 <footer>
       <p><font color="FFCC33">Made by: pjjeniffer</font></p>
