--- a/Individual Project/Github.html
+++ b/Individual Project/Github.html
@@ -20,7 +20,7 @@ Username:<br/>
 <br/>
 E-mail:<br/>
 <input type="text" value="your e-mail address">
-cipher:<br/>
+<br/>cipher:<br/>
 <input type="text" value="your chiper">
 <br/><br/>
 <input type="submit" value="Sign up">
