--- a/Individual Project/color.html
+++ b/Individual Project/color.html
@@ -14,6 +14,7 @@
  <p><h2>This color table is from w3school:http://www.w3school.com.cn/cssref/css_colors.asp</h2></a>
  <img src="/Individual Project/color1.jpg"  alt="color table"/>
  <img src="/Individual Project/color2.jpg"  alt="color table"/>
+<br/><a href="https://pjjeniffer.github.io/Individual%20Project/context.html">back to Directory</a>
 <hr/>
 <footer>
       <p><font color="FFCC33">Made by: pjjeniffer</font></p>
