--- a/Individual Project/css.html
+++ b/Individual Project/css.html
@@ -1,6 +1,6 @@
-﻿<html>
+<html>
 <head>
-<title>Html</title>
+<title>CSS</title>
  <link rel="stylesheet" type="text/css" href="main.css" />
  <style type="text/css">
  </style>
@@ -8,7 +8,28 @@
 <body">
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
- <p><h2>CSS</h2></a>
+ <p><h1>CSS</h1></p>
+ <p>CSS basic style：selector {property: value}<br/>property and value union declaration</p>
+ <p><h1>CSS：Three kinds of style</h1></a>
+ <p><h2>1.External style sheet</h2></p> 
+ <p><h3>Write a .css file,then use link tag between the head tag to use the External style sheet.
+        <br/>it is so convenient for making several same theme e=websites</h3></p>
+ <p><h2>2.Internal style sheet</h2></p>  
+ <p><h3>Use style tag which type="text/css" to use Internal style sheet.</h3></p>
+ <p><h2>3.Inline style</h2></p>  
+ <p><h3>Use style (style) properties within associated labels.</h3></p>
+ <p><h1>CSS selectors </h2></a>
+ <p><h2>1.contextual selectors</h2></p>  
+ <p><h3>Only the xx tag in the xx element works</h3></p>
+ <p><h2>2.id selectors</h2></p>  
+ <p><h3>Define it as "#",Specify a specific style for an HTML element with a specific id
+                        <br/>But Specify a specific style for an HTML element with a specific id!</h3></p>
+ <p><h2>3.class selectors</h2></p>  
+ <p><h3>Define it as "."Specify a specific style for an HTML element with a specific class.</h3></p>
+ <p><h2>4.Attribute selector</h2></p>  
+ <p><h3>You can set styles for HTML elements that have specified attributes, not just class and id attributes</h3></p>
+<br/>
+<a href="https://pjjeniffer.github.io/Individual%20Project/context.html">back to Directory</a>
 <hr/>
 <footer>
       <p><font color="FFCC33">Made by: pjjeniffer</font></p>
