--- a/Individual Project/context.html
+++ b/Individual Project/context.html
@@ -16,7 +16,7 @@
  <p><h3><a href="https://pjjeniffer.github.io/Individual%20Project/htmltag.html">Html Tag</h3></a></p> 
  <p><h3><a href="https://pjjeniffer.github.io/Individual%20Project/How%20to%20write%20a%20HTML.html">How to write the first HTML</h3></a></p>
  <p><h3><a href="https://pjjeniffer.github.io/Individual%20Project/Github.html">Github</h3></a></p>
- <p><h3><a href="https://pjjeniffer.github.io/Individual%20Project/color.html">Github</h3></a></p>                                                                              
+ <p><h3><a href="https://pjjeniffer.github.io/Individual%20Project/color.html">Color</h3></a></p>                                                                              
  
 <footer>
       <p><font color="FFCC33">Made by: pjjeniffer</font></p>
