--- a/Individual Project/individual.html
+++ b/Individual Project/individual.html
@@ -11,7 +11,7 @@
   }
  </style>
 </head>
-<body">
+<body>
       <img src="/Individual Project/girl.jpg"  alt="logo" height="100" width="100"/>
 <hr />
                                              
@@ -23,9 +23,7 @@
   <p><h4>CSS can be used to not only modify pages in a static way, 
     but also to format the elements of the page dynamically with various scripting languages.</h4></p>
 <a href="https://pjjeniffer.github.io/Individual%20Project/context.html"><h4>Directory</h4></a> 
-<audio controls="controls">
-  <source src="Individual Project/music.mp3" type="audio/ogg">
-  <source src="Individual Project/music.mp3" type="audio/mpeg">
+<audio src="/Individual Project/music.mp3" controls="controls">
 </audio>   
 <hr/>
                
