--- a/Individual Project/css.html
+++ b/Individual Project/css.html
@@ -3,6 +3,7 @@
 <title>CSS</title>
  <link rel="stylesheet" type="text/css" href="main.css" />
  <style type="text/css">
+  body {font-family: sans-serif;}
  </style>
 </head>
 <body">
